syntax = "proto3";

package data;

option go_package = "./;data";

// Message to represent job ready for next run
message ProcessJob {
	string JobName = 1;
}

// Request message to get list of jobs for next run
message PassJobsReq {}

// Response message with list of jobs
message PassJobsRes {
	repeated ProcessJob JobList = 1;
}

// Service to handle get jobs for next run
service PassJobs {
	rpc Pass(PassJobsReq) returns (PassJobsRes) {}
}